add neo-brutalist logo to recorder and studio ui

--- a/extension/recorder.html
+++ b/extension/recorder.html
@@ -577,7 +577,8 @@
 
 
         <header class="header">
-            <div class="brand">Drift<span>_</span></div>
+            <img src="images/logo.png" alt="Drift Logo" class="brand-logo"
+                style="width: 80px; height: 80px; border-radius: 12px; border: 4px solid #1a1a2e; box-shadow: 6px 6px 0 #DCFE50; margin-bottom: 20px;">
             <h1 class="title">Professional Screen Recording</h1>
             <p class="subtitle">Cinema-grade auto-zoom that follows your clicks</p>
         </header>
@@ -632,7 +633,11 @@
     <!-- STUDIO -->
     <div id="studioMode" class="hidden">
         <header class="studio-header">
-            <h1>Drift<span>_</span> Studio</h1>
+            <div style="display:flex; align-items:center; gap:12px;">
+                <img src="images/logo.png"
+                    style="width: 36px; height: 36px; border: 2px solid #1a1a2e; border-radius: 6px;">
+                <h1>Drift<span>_</span> Studio</h1>
+            </div>
             <div class="stats-bar">
                 <div class="stat-item">Duration: <strong id="statDuration">00:00</strong></div>
                 <div class="stat-item">Clicks: <strong id="statClicks">0</strong></div>
